# vlm-eval

./: README.md  pyproject.toml
results/: summary.json  trajectories.jsonl
src/: data.py  main.py  metrics.py  model.py  parser.py  pipeline.py
