[project]
name = "vlm-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "huggingface-hub>=1.24.0",
    "pillow>=12.3.0",
    "qwen-vl-utils>=0.0.14",
    "requests>=2.34.2",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "transformers>=5.14.1",
]
